--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon ./src"
+    "start": "node ./src",
+    "dev": "nodemon ./src"
   },
   "keywords": [],
   "author": "",
