--- a/client/package.json
+++ b/client/package.json
@@ -9,20 +9,19 @@
     "build": "vite build",
     "preview": "vite preview"
   },
-  "dependencies": {
-    "axios": "^1.3.4",
-    "file-saver": "^2.0.5",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.1"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
     "autoprefixer": "^10.4.13",
+    "axios": "^1.3.4",
     "dotenv": "^16.0.3",
+    "file-saver": "^2.0.5",
     "postcss": "^8.4.21",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.8.1",
     "tailwindcss": "^3.2.7",
     "vite": "^4.1.0"
   }
